fix(btn-group): change to overflow:hidden for :focus style
Closes #5446

--- a/packages/angular/projects/clr-angular/src/button/button-group/_button-group.clarity.scss
+++ b/packages/angular/projects/clr-angular/src/button/button-group/_button-group.clarity.scss
@@ -17,7 +17,7 @@
     .btn {
       margin: 0;
       vertical-align: top;
-      overflow: visible;
+      overflow: hidden;
 
       label {
         height: 100%;
